--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
+    "js-base64": "^2.5.1",
     "js-cookie": "^2.2.1",
     "px2rem-loader": "^0.1.9",
     "qs": "^6.9.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
+    "vue-ueditor-wrap": "^2.4.1",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
