--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "element-ui": "^2.12.0",
     "js-base64": "^2.5.1",
     "js-cookie": "^2.2.1",
+    "mavon-editor": "^2.7.7",
     "px2rem-loader": "^0.1.9",
     "qs": "^6.9.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
     "vue-ueditor-wrap": "^2.4.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
