--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cnpm": "^6.1.0",
+    "echarts": "^4.4.0",
     "element-ui": "^2.12.0",
     "install": "^0.13.0",
     "js-base64": "^2.5.1",
@@ -21,6 +22,7 @@
     "px2rem-loader": "^0.1.9",
     "qs": "^6.9.0",
     "sass-loader": "^7.3.1",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
